<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerEstado"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerOperador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:hint="Operador"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CFD8DC"
                android:textSize="13dp"
                app:met_floatingLabel="normal" />

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:hint="Tipo"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CFD8DC"
                android:textSize="13dp"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/btnAddEquipos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:text="+"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/question_conectado_red_electrica" />


            <RadioGroup
                android:id="@+id/radioGroupConectadoRedElectrica"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/gray_out_line"
                android:checkedButton="@+id/radioButtonSiConectadoRedElectrica"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonNoConectadoRedElectrica"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_selector_red"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonSiConectadoRedElectrica"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_selector_green"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/si"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/title_medidor" />

            <RadioGroup
                android:id="@+id/radioGroupMedidor"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@drawable/gray_out_line"
                android:checkedButton="@+id/radioButtonSiMedidor"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonNoMedidor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_selector_red"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radioButtonSiMedidor"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_selector_green"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/si"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutCodigoEquipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:hint="@string/title_codigo_equipo"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edtCodigoEquipo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="#ffffff"
                android:drawablePadding="16dp"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescripcionOtro"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="Descripción(Requerido)"
            android:visibility="gone"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/edtDescripcionOtro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:drawablePadding="16dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:padding="15dp"
                android:scrollbars="vertical" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:id="@+id/indicator_schedule_status"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorAccent" />

        <include layout="@layout/content_recycler_view" />

    </LinearLayout>


</RelativeLayout>