<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:orientation="horizontal">

            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/spinnerTipoPerdida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.5"
                android:hint="Tipo de Pérdida"
                android:textColor="@color/colorAccent"
                android:textColorHint="#CFD8DC"
                android:textSize="13dp"
                app:met_floatingLabel="normal" />

            <Button
                android:id="@+id/btnAddPerdidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/orange"
                android:text="+"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                    <EditText
                        android:id="@+id/edtCantidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cantidad"
                        android:inputType="number"
                        android:padding="8dp" />
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/radioGroupPerdida"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@drawable/gray_out_line"
                    android:checkedButton="@+id/radioButtonNoPerdida"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonNoPerdida"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_selector_red"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/no"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radioButtonSiPerdida"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_weight="1"
                        android:background="@drawable/toggle_selector_green"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/si"
                        android:textColor="@color/white" />
                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutDescripcion"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/descripcion"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:drawablePadding="16dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:padding="15dp"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>

            <!-- <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutNovedad"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

                <EditText
                    android:id="@+id/edtNovedad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textMultiLine"
                    android:overScrollMode="always"
                    android:padding="15dp"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout> -->


        </LinearLayout>


        <View
            android:id="@+id/indicator_schedule_status"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorAccent" />

        <include layout="@layout/content_recycler_view" />

    </LinearLayout>


</RelativeLayout>